test/Fail/LocalRewriteOutsideTele.err
LocalRewriteOutsideTele.agda:8.19-35: error: [LocalRewriteOutsideTelescope]
Local rewrite rule arguments are (currently) only allowed in module telescopes. Consider creating an anonymous module.
when checking that the expression x ≡ 0 → Nat is a type
